# qanta

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/getting-started/: index.html
1.0.0/reference/: index.html
1.0.0/search/: search_index.json
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/getting-started/: index.html
dev/reference/: index.html
dev/search/: search_index.json
docs/: getting-started.md  index.md  reference.md
src/qanta/: __init__.py  binning.py  centroids.py
tests/: __init__.py  test_binning.py  test_centroids.py  test_example.py  test_package.py
